--- a/index.html
+++ b/index.html
@@ -384,6 +384,10 @@ required. Examples will be drawn from ecology, economics, epidemiology,
 finance and elsewhere.</p>
 <p>The course outline, course information and grading policies are
 described in the <a href="syllabus.html">syllabus</a>.</p>
+<p>631 has an additional <a href="631.html">reading group</a> where we
+discuss a research paper each week. Students registering for 631 are
+expected to have taken at least one core PhD-level class such as STATS
+600.</p>
 <hr />
 </div>
 <div id="class-notes" class="section level2">
