--- a/syllabus.html
+++ b/syllabus.html
@@ -373,7 +373,7 @@ discussion forum</a></li>
 <ul>
 <li>email: <a href="mailto:ionides@umich.edu" class="email">ionides@umich.edu</a></li>
 <li>web: dept.stat.lsa.umich.edu/~ionides</li>
-<li>office hours: Wed 4-5pm, Thu 3-4pm in 453 West Hall.</li>
+<li>office hours: Wed 4-5pm, Thu 2-3pm in 453 West Hall.</li>
 </ul>
 <p>GSI: Aaron Abkemeier</p>
 <ul>
@@ -483,10 +483,10 @@ include discussion relating to reproducibility of the project’s
 numerical results.</li>
 <li>Participation (5%). Students are expected to help with building a
 learning community where we support each other by asking and answering
-questions. Participation grading will be based on quality and quantity
-of posts on the class Piazza discussion forum.
-<!--To build a learning community, willingness to ask and answer questions in class is valuable. Similarly, both raising and answering questions on a discussion forum can help the entire class.
-The instructor and GSI will keep track of student participation following a [rubric](rubric_participation.html).--></li>
+questions. Half the participation credit will be awarded for quality and
+quantity of posts on the class Piazza discussion forum. The other half
+will be awarded for responding to in-class feedback questions; typically
+single-question Canvas quizzes that do not require any preparation.</li>
 <li>Two quizzes (5% each), in class on Monday 2/17 and Wednesday
 4/16.</li>
 <li>Course letter grades are anticipated to be mostly in the A, A-, B+
