--- a/hw00/hw00.html
+++ b/hw00/hw00.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Instructor: Edward L. Ionides" />
+<meta name="author" content="DATASCI/STATS 531" />
 
 
-<title>DATASCI/STATS 531/631 (Winter 2025)  ‘Modeling and Analysis of Time Series Data’</title>
+<title>Homework 0. Some course preparation.</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,212 +349,97 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">DATASCI/STATS 531/631 (Winter 2025)
-<br>‘Modeling and Analysis of Time Series Data’</h1>
-<h4 class="author">Instructor: Edward L. Ionides</h4>
+<h1 class="title toc-ignore">Homework 0. Some course preparation.</h1>
+<h4 class="author">DATASCI/STATS 531</h4>
 
 </div>
 
-<div id="TOC">
+
+<p>This homework has nothing to turn in, but it prepares you for future
+assignments.</p>
+<div id="read-the-syllabus" class="section level2">
+<h2>Read the syllabus</h2>
 <ul>
-<li><a href="#course-description" id="toc-course-description">Course
-description</a></li>
-<li><a href="#class-notes" id="toc-class-notes">Class notes</a></li>
-<li><a href="#homework-and-participation-assignments" id="toc-homework-and-participation-assignments">Homework and
-participation assignments</a></li>
-<li><a href="#acknowledgements-and-license" id="toc-acknowledgements-and-license">Acknowledgements and
-License</a></li>
+<li>As the <a href="../syllabus.html">syllabus</a> explains, the <a href="../rubric_homework.html">grading rubric</a> puts considerable
+emphasis on scholarship, including the need to cite all sources and to
+be explicit about the lack of sources when you do not consult any. You
+are expected to make it easy for the reader to assess your own
+contribution and what help you did (and did not) get from sources. This
+is necessary in order to allow full use of internet resources, including
+the many past projects and homework solutions available online, while
+maintaining the course integrity. If you follow standard scientific
+citation practices, the scholarship points are easy credit and we can
+happily focus on learning time series. If we have to spend time learning
+how to give proper credit to sources, that is also not wasted
+effort.</li>
 </ul>
 </div>
-
-<hr />
-<div id="course-description" class="section level2">
-<h2>Course description</h2>
-<p>This course gives an introduction to time series analysis using time
-domain methods and frequency domain methods. The goal is to acquire the
-theoretical and computational skills required to investigate data
-collected as a time series. The first half of the course will develop
-classical time series methodology, including auto-regressive moving
-average (ARMA) models, regression with ARMA errors, and estimation of
-the spectral density. The second half of the course will focus on state
-space model techniques for fitting structured dynamic models to time
-series data. We will progress from fitting linear, Gaussian dynamic
-models to fitting nonlinear models for which Monte Carlo methods are
-required. Examples will be drawn from ecology, economics, epidemiology,
-finance and elsewhere.</p>
-<p>The course outline, course information and grading policies are
-described in the <a href="syllabus.html">syllabus</a>.</p>
-<p>631 has an additional <a href="631.html">reading group</a> where we
-discuss a research paper each week. Students registering for 631 are
-expected to have taken at least one core PhD-level class such as STATS
-600.</p>
-<hr />
-</div>
-<div id="class-notes" class="section level2">
-<h2>Class notes</h2>
-<ol style="list-style-type: decimal">
-<li><a href="01/index.html">Introduction</a></li>
-</ol>
-<!--
-
-2. [Estimating trend and autocovariance](02/index.html)
-
-3. [Stationarity, white noise, and some basic time series models](03/index.html)
-
-4. [Linear time series models and the algebra of ARMA models](04/index.html)
-
-5. [Parameter estimation and model identification for ARMA models](05/index.html)
-
-6. [Extending the ARMA model: Seasonality, integration and trend](06/index.html)
-
-7. [Introduction to time series analysis in the frequency domain](07/index.html)
-
-8. [Smoothing in the time and frequency domains](08/index.html)
-
-9. [Case study: An association between unemployment and mortality?](09/index.html)
-
-10. [Introduction to partially observed Markov process models](10/index.html)
-
-11. [Introduction to simulation-based inference for epidemiological dynamics via the pomp R package](11/index.html)
-
-12. [Simulation of stochastic dynamic models](12/index.html)
-
-13. [Likelihood for POMP models: Theory and practice](13/index.html)
-
-14. [Likelihood maximization for POMP models](14/index.html)
-
-15. [A case study of polio including covariates, seasonality & over-dispersion](15/index.html)
-
-16. [A case study of financial volatility and a POMP model with observations driving latent dynamics](16/index.html). With [notes on how to run the code on the Great Lakes Linux cluster](16/README.html).
-
-17. [A case study of measles: Dynamics revealed in long time series](17/index.html)
-
-18. [A case study of ebola: Model criticism and forecasting](18/index.html)
-
--->
-<!--
-
-There are further POMP case studies, in a similar style, on [Ebola modeling](https://kingaa.github.io/sbied/ebola/index.html), [measles transmission](https://kingaa.github.io/sbied/measles/index.html), and [dynamic variation in the rate of human sexual contacts](https://kingaa.github.io/sbied/contacts/index.html).
-
---------
-
--->
-</div>
-<div id="homework-and-participation-assignments" class="section level2">
-<h2>Homework and participation assignments</h2>
+<div id="join-piazza" class="section level2">
+<h2>Join Piazza</h2>
 <ul>
-<li><a href="hw00/hw00.html">Homework 0</a>. Some course preparation.
-Nothing to submit.</li>
+<li><p>Asking and answering questions on Piazza are both contributions
+to the course community, and both count toward the course participation
+credit, as described in the syllabus.</p></li>
+<li><p>Please join the class Piazza site <a href="https://piazza.com/umich/winter2025/datascistats531">piazza.com/umich/winter2025/datascistats531</a>
+if you have not already done so.</p></li>
 </ul>
-<!--
-
-* [Homework 1](hw01/hw01.html), due Sun Jan 21, 11:59pm. 
-[Solution](hw01/sol01.html).
-
-* [Participation 1](participation/participation1.html), due Sun Jan 21, 11:59pm.
-
-
-
-* [Homework 2](hw02/hw02.html), due Tue Jan 30, 11:59pm.
-[Solution](hw02/sol02.html).
-
-* [Participation 2](participation/participation2.html), due Tue Jan 30, 11:59pm.
-
-* [Homework 3](hw03/hw03.html), due Sun Feb 11, 11:59pm.
-[Solution](hw03/sol03.html).
-
-* [Participation 3](participation/participation3.html), due Sun Feb 11, 11:59pm.
-
-* [Homework 4](hw04/hw04.html), due Sun Feb 18, 11:59pm.
-[Solution](hw04/sol04.html).
-
-* [Participation 4](participation/participation4.html), due Sun Feb 18, 11:59pm.
-
-* [Homework 5](hw05/hw05.html), due Sun Mar 17, 11:59pm.
-[Solution](hw05/sol05.html).
-
-* [Participation 5](participation/participation5.html), due Sun Mar 17, 11:59pm.
-
-
-* [Homework 6](hw06/hw06.html), due Sun Mar 24, 11:59pm. 
-[Solution](hw06/sol06.html).
-
-* [Participation 6](participation/participation6.html), due Sun Mar 24, 11:59pm.
-
-* [Homework 7](hw07/hw07.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
-[Solution](hw07/sol07.html).
-
-
-* [Participation 7](participation/participation7.html), due Sun Mar 31, 11:59pm. Extended to Wed Apr 3.
-
-
-* [Homework 8](hw08/hw08.pdf), due Sun Apr 14, 11:59pm.
-[Solution](hw08/sol08.pdf).
-
-* [Participation 8](participation/participation8.html), due Sun Apr 14, 11:59pm.
-
--->
-<!--
-
-* There is no assigned homework for the last two weeks of the semester. You should work on your final project. The remaining lectures contain material that will be useful for your final projects.
-
--------------------
-
--->
-<!--
-
-## Midterm project
-
-* [Information](midterm_project/midterm_project_info.html).
-
-* [Midterm peer review report instructions](midterm_project/midterm_review.html)
-
-* [2024 midterm projects](midterm_project/index.html)
-
-* You are welcome to browse previous midterm projects. The [2022 midterm projects](http://ionides.github.io/531w22/midterm_project/) and  [2021 midterm projects](http://ionides.github.io/531w21/midterm_project/) have a posted summary of peer review comments. Earlier projects are also available, from [2016](http://ionides.github.io/531w16/midterm_project/), [2018](http://ionides.github.io/531w18/midterm_project/) and [2020](http://ionides.github.io/531w20/midterm_project/).
-
-
--------------
-
--->
-<!--
-
-## Final project
-
-
-* [Information](final_project/final_project_info.html)
-
-* [Final peer review report instructions](final_project/final_review.html)
-
-* [2024 final projects](final_project/index.html)
-
-* You're welcome to browse previous final projects. The [2021](http://ionides.github.io/531w21/final_project/) and  [2022](http://ionides.github.io/531w22/final_project/)  final projects have a posted summary of peer review comments. Earlier projects from [2016](http://ionides.github.io/531w16/final_project/), [2018](http://ionides.github.io/531w18/final_project/), [2020](http://ionides.github.io/531w20/final_project/) may also be useful.
-
-If building on old source code, note that there are some differences between versions of the software package **pomp**. The [**pomp** version 2 upgrade guide](https://kingaa.github.io/pomp/vignettes/upgrade_guide.html) can be helpful. There are various smaller changes between **pomp 2.0** and the current **pomp 5.6**.
-
---------
-
-## Using the Great Lakes cluster
-
-* Great Lakes access will be set up after the midterm project and used for the second half of the course.
-
-* [Introductory notes](greatlakes/index.html) for using our class account on the greatlakes cluster. This is optional but may be helpful for your final project.
-
-* If you are already familiar with using R on Great Lakes, all you need to know is the class account: ```stats531w24_class```.
-
-* You are expected to use our class account only for computations related to DATASCI/STATS 531.
-
-* Please share knowledge about cluster computing between group members, and/or on piazza, to help everyone who wants to learn these skills.
-
-* Cluster-related questions can also be emailed to arc-support@umich.edu.
-
----------
-
--->
 </div>
-<div id="acknowledgements-and-license" class="section level2">
-<h2>Acknowledgements and License</h2>
-<p>This course and the code involved are made available with an <a href="LICENSE">Creative Commons</a>. A list of acknowledgments is <a href="acknowledge.html">available</a>.</p>
+<div id="internet-repositories-for-collaboration-and-open-source-research-git-and-github" class="section level2">
+<h2>Internet repositories for collaboration and open-source research:
+git and GitHub</h2>
+<ul>
+<li><p>All the course materials are in a git repository, at <a href="https://github.com/ionides/531w25">https://github.com/ionides/531w25</a>.
+Keeping a local copy of the course git project is a good way to maintain
+up-to-date copies of all the files. Also, you may find additional
+features of git to be useful, such as making pull requests with
+corrections or improvements to the notes!</p></li>
+<li><p>You do not need to use git for this course. All the materials are
+mirrored from the GitHub repository to the class website. However, use
+of git is recommended.</p></li>
+<li><p>Git is currently the dominant tool for managing, developing and
+sharing code within the computational sciences and industry.</p></li>
+<li><p>GitHub is the largest git-based internet repository, but others
+(such as bitbucket) also use git, and it can be useful to use git to
+build a local repository on your own computer.</p></li>
+<li><p>If you like, you can read Karl Broman’s practical and minimal
+git/github tutorial (<a href="https://kbroman.org/github_tutorial/">kbroman.org/github_tutorial</a>).
+A deeper, more technical tutorial is <a href="https://www.atlassian.com/git/tutorials/">www.atlassian.com/git/tutorials</a>.</p></li>
+</ul>
+</div>
+<div id="r-and-rstudio" class="section level2">
+<h2>R and Rstudio</h2>
+<ul>
+<li><p>You have probably used R before, and if not it is time to start!
+We will make extensive use of R. Please check an up-to-date R version is
+installed on your laptop. It is available at <a href="https://www.r-project.org">www.r-project.org</a></p></li>
+<li><p>Rstudio is a popular environment for carrying out statistical
+analysis in R. You can choose whether or not to access R through Rstudio
+for this course, but many people find that a convenient approach. It can
+be downloaded from <a href="https://posit.co/products/open-source/rstudio/">https://posit.co/products/open-source/rstudio/</a></p></li>
+</ul>
+</div>
+<div id="rmarkdown-and-knitr" class="section level2">
+<h2>Rmarkdown and knitr</h2>
+<ul>
+<li><p>The midterm and final projects will be submitted as reproducible
+reports written in Rmarkdown or knitr. A reproducible report combines
+text and source code, generates the results by running the code, and
+inserts the resulting tables, figures and numbers into the finished
+document.</p></li>
+<li><p>Advantages of this approach are: (i) you can easily modify your
+report if you want to try doing something differently; (ii) the reader
+can, if necessary, inspect or run the code that gave the results; (iii)
+classmates can easily learn effective data analysis techniques from each
+other.</p></li>
+<li><p>Rmarkdown is a popular approach for doing this, see <a href="http://rmarkdown.rstudio.com">rmarkdown.rstudio.com</a>. If you
+have not used Rmarkdown before, you might like to start familiarizing
+yourself with it. Rstudio works well with Rmarkdown (Rmd) files,
+especially for generating HTML documents. Knitr is similar to Rmarkdown,
+and provides a better environment for producing pdf documents. The
+course notes are written using knitr, and you are welcome to inspect the
+source files in the GitHub repository.</p></li>
+</ul>
+<hr />
 </div>
 
 
