--- a/hw00/hw00.html
+++ b/hw00/hw00.html
@@ -375,12 +375,12 @@ effort.</li>
 </ul>
 </div>
 <div id="join-piazza" class="section level2">
-<h2>Join Piazza</h2>
+<h2>Join piazza</h2>
 <ul>
-<li><p>Asking and answering questions on Piazza are both contributions
+<li><p>Asking and answering questions on piazza are both contributions
 to the course community, and both count toward the course participation
 credit, as described in the syllabus.</p></li>
-<li><p>Please join the class Piazza site <a href="https://piazza.com/umich/winter2025/datascistats531">piazza.com/umich/winter2025/datascistats531</a>
+<li><p>Please join the class piazza site <a href="https://piazza.com/umich/winter2025/datascistats531">piazza.com/umich/winter2025/datascistats531</a>
 if you have not already done so.</p></li>
 </ul>
 </div>
