--- a/index.html
+++ b/index.html
@@ -382,12 +382,10 @@ series data. We will progress from fitting linear, Gaussian dynamic
 models to fitting nonlinear models for which Monte Carlo methods are
 required. Examples will be drawn from ecology, economics, epidemiology,
 finance and elsewhere.</p>
-<p>The course outline, course information and grading policies are
-described in the <a href="syllabus.html">syllabus</a>.</p>
-<p>631 has an additional <a href="631.html">reading group</a> where we
-discuss a research paper each week. Students registering for 631 are
-expected to have taken at least one core PhD-level class such as STATS
-600.</p>
+<p>Additional information is in the <a href="syllabus.html">syllabus</a>. Online discussion is on <a href="https://piazza.com/umich/winter2025/datascistats531">piazza</a>.</p>
+<p>631 includes a <a href="631.html">reading group</a> where we discuss
+a research paper each week. Students registering for 631 are expected to
+have taken at least one core PhD-level class such as STATS 600.</p>
 <hr />
 </div>
 <div id="class-notes" class="section level2">
