minor change to syllabus

--- a/syllabus.html
+++ b/syllabus.html
@@ -501,11 +501,12 @@ determined in the context of the course for this specific semester.</li>
 The grader will look for demonstrated effort in submitted homework, with
 contributions that go beyond the sources.</p>
 <ul>
-<li><p>Each homework will have a question asking about sources. You will
-be asked to explain which parts of your responses above made use of a
-source, meaning anything or anyone you consulted (including classmates
-or office hours or any website you visited) to help you write or check
-your answers. <strong>All sources are permitted. Every source must be
+<li><p>Each homework will have points for scholarship, which mostly
+means clarifying sources (or the lack of sources). You will be asked to
+explain which parts of your responses above made use of a source,
+meaning anything or anyone you consulted (including classmates or office
+hours or any website you visited) to help you write or check your
+answers. <strong>All sources are permitted. Every source must be
 documented. Full credit requires being explicit about which parts you
 did without any collaboration or other source, as well as being explicit
 about which parts used or did not use each listed
