--- a/index.html
+++ b/index.html
@@ -391,11 +391,11 @@ have taken at least one core PhD-level class such as STATS 600.</p>
 <div id="class-notes" class="section level2">
 <h2>Class notes</h2>
 <ol style="list-style-type: decimal">
-<li><a href="01/index.html">Introduction</a></li>
+<li><p><a href="01/index.html">Introduction</a></p></li>
+<li><p><a href="02/index.html">Estimating trend and
+autocovariance</a></p></li>
 </ol>
 <!--
-
-2. [Estimating trend and autocovariance](02/index.html)
 
 3. [Stationarity, white noise, and some basic time series models](03/index.html)
 
