--- a/01/index.html
+++ b/01/index.html
@@ -374,19 +374,23 @@ Data<br>DATASCI/STATS 531.<br>Chapter 1: Introduction</h1>
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
+<td align="left">Annotated slides</td>
+<td align="center"><a href="slides-annotated.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Discussion questions</td>
 <td align="center"><a href="discussion.html">html</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">Recording, Winter 2021: Chapter 1, Part 1</td>
 <td align="center"><a href="https://youtu.be/Zb8QPW-ldPM">(15
 mins)</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Recording, Winter 2021: Chapter 1, Part 2</td>
 <td align="center"><a href="https://youtu.be/8LvOkEgtwpU">(25
 mins)</a></td>
