--- a/rubric_homework.html
+++ b/rubric_homework.html
@@ -390,14 +390,12 @@ Explicitly saying when you did not use sources helps the grader and
 therefore deserves additional credit. If you say nothing about sources,
 the grader may start wondering about the difference between absence of
 evidence and evidence of absence, and may legitimately find room for
-improvement in your solution.</p>
+improvement in the scholarship for your solution.</p>
 <p>Getting full credit for good scholarship should be easy. You just
 have to follow standard scientific practice while being honest,
-generous, and helpful to the reader. However, if a careful reader
-notices that credit is unclear and starts to wonder if there are
-significant missing sources, you will start losing points. In extreme
-cases, failure to credit sources can amount to plagiarism which can end
-up having serious consequences for your success in this class.</p>
+generous, and helpful to the reader. From another perspective, failure
+to credit sources can amount to plagiarism which can end up having
+serious consequences for your success in this class.</p>
 <hr />
 </div>
 <div id="scholarship-5-points" class="section level2">
