--- a/index.html
+++ b/index.html
@@ -441,13 +441,12 @@ There are further POMP case studies, in a similar style, on [Ebola modeling](htt
 <div id="homework-and-participation-assignments" class="section level2">
 <h2>Homework and participation assignments</h2>
 <ul>
-<li><a href="hw00/hw00.html">Homework 0</a>. Some course preparation.
-Nothing to submit.</li>
+<li><p><a href="hw00/hw00.html">Homework 0</a>. Some course preparation.
+Nothing to submit.</p></li>
+<li><p><a href="hw01/hw01.html">Homework 1</a>, due Sun Jan 19, 11:59pm.
+<a href="hw01/sol01.html">Solution</a>.</p></li>
 </ul>
 <!--
-
-* [Homework 1](hw01/hw01.html), due Sun Jan 21, 11:59pm. 
-[Solution](hw01/sol01.html).
 
 * [Participation 1](participation/participation1.html), due Sun Jan 21, 11:59pm.
 
