--- a/participation/participation1.html
+++ b/participation/participation1.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531" />
 
 
-<title>Chapter 3 discussion questions</title>
+<title>Participation 1, piazza engagement up to Tuesday 1/28, 11:59pm</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,32 +349,30 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Chapter 3 discussion questions</h1>
+<h1 class="title toc-ignore">Participation 1, piazza engagement up to
+Tuesday 1/28, 11:59pm</h1>
 <h4 class="author">DATASCI/STATS 531</h4>
 
 </div>
 
 
-<hr />
-<p><strong>Q3.1. Burn-in.</strong> On slide 18 of Chapter 3, we
-discovered that <code>arima.sim()</code> initializes using a burn-in
-strategy that throws away the first 13 simulated time points. Finding
-out where this number 13 comes from, and whether it would change for a
-different model, is an exercise in checking the source code. By looking
-at <code>?arima.sim</code> can you tell how the burn-in lag is chosen?
-Perhaps using some of the ideas of Chapter 4 you can intuitively explain
-why this might be a reasonable choice.</p>
-<p><strong>Q3.2. Models for white noise without independence.</strong>
-The plots on slides 29 and 31 of Chapter 3 demonstrate that stock market
-returns are examples of quantities that are uncorrelated but not
-independent. More exactly, we showed that an appropriate model for stock
-market returns should have these properties. Independent and identically
-distributed models are relatively easy to write down, since you can just
-specify a marginal density for one variable, a common example being the
-normal density. Can you write down a mean zero, constant variance time
-series model (i.e., a collection of random variables) which is
-uncorrelated but not independent? If you can think of many choices, you
-can ask which may be most appropriate for these data.</p>
+<p>Participation credit rewards and incentivizes contributions that help
+to build a constructive learning community for our study of time series
+analysis.</p>
+<p>At four points in the semester the GSI will evaluate piazza activity.
+These checkpoints will likely coincide with even-numbered homeworks.
+Ideally, online class discussion should occur evenly throughout the term
+rather than concentrating just before the checkpoints!</p>
+<p>Participation is graded according to the <a href="../rubric_participation.html">participation rubric</a>. The
+expectation is that you should have at least one constructive
+contribution to the class community each reporting period. Participation
+is not evaluated on whether it is right or wrong, indeed it is an
+opportunity to obtain feedback on your thoughts when you don’t know if
+they are correct or not.</p>
+<p>The usual rules for scholarship apply to Piazza posts and responses.
+You are encouraged to use sources; even GenAI can supply useful
+material. However, you should cite sources. You should not put your own
+name to material that was not written by you.</p>
 <hr />
 
 
