--- a/rubric_participation.html
+++ b/rubric_participation.html
@@ -354,7 +354,7 @@ display: none;
 </div>
 
 
-<p>Participation credit rewards and incentivize contributions that help
+<p>Participation credit rewards and incentivizes contributions that help
 to build a constructive learning community for our study of time series
 analysis.</p>
 <ol style="list-style-type: decimal">
