--- a/index.html
+++ b/index.html
@@ -396,10 +396,10 @@ have taken at least one core PhD-level class such as STATS 600.</p>
 autocovariance</a></p></li>
 <li><p><a href="03/index.html">Stationarity, white noise, and some basic
 time series models</a></p></li>
+<li><p><a href="04/index.html">Linear time series models and the algebra
+of ARMA models</a></p></li>
 </ol>
 <!--
-
-4. [Linear time series models and the algebra of ARMA models](04/index.html)
 
 5. [Parameter estimation and model identification for ARMA models](05/index.html)
 
