--- a/participation/participation1.html
+++ b/participation/participation1.html
@@ -12,7 +12,7 @@
 <meta name="author" content="DATASCI/STATS 531" />
 
 
-<title>Participation 1, piazza engagement up to Tuesday 1/28, 11:59pm</title>
+<title>Piazza participation 1, up to Tuesday 1/28, 11:59pm</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,8 +349,8 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Participation 1, piazza engagement up to
-Tuesday 1/28, 11:59pm</h1>
+<h1 class="title toc-ignore">Piazza participation 1, up to Tuesday 1/28,
+11:59pm</h1>
 <h4 class="author">DATASCI/STATS 531</h4>
 
 </div>
@@ -365,11 +365,11 @@ Ideally, online class discussion should occur evenly throughout the term
 rather than concentrating just before the checkpoints!</p>
 <p>Participation is graded according to the <a href="../rubric_participation.html">participation rubric</a>. The
 expectation is that you should have at least one constructive
-contribution to the class community each reporting period. Participation
-is not evaluated on whether it is right or wrong, indeed it is an
-opportunity to obtain feedback on your thoughts when you don’t know if
-they are correct or not.</p>
-<p>The usual rules for scholarship apply to Piazza posts and responses.
+contribution to the class online discussion community each reporting
+period. Participation is not evaluated on whether it is right or wrong,
+indeed it is an opportunity to obtain feedback on your thoughts when you
+don’t know if they are correct or not.</p>
+<p>The usual rules for scholarship apply to piazza posts and responses.
 You are encouraged to use sources; even GenAI can supply useful
 material. However, you should cite sources. You should not put your own
 name to material that was not written by you.</p>
