--- a/03/discussion.html
+++ b/03/discussion.html
@@ -366,15 +366,34 @@ Perhaps using some of the ideas of Chapter 4 you can intuitively explain
 why this might be a reasonable choice.</p>
 <p><strong>Q3.2. Models for white noise without independence.</strong>
 The plots on slides 29 and 31 of Chapter 3 demonstrate that stock market
-returns are examples of quantities that are uncorrelated but not
-independent. More exactly, we showed that an appropriate model for stock
-market returns should have these properties. Independent and identically
+returns provide an example of data that are appropriately modeled as
+uncorrelated but not independent. Independent and identically
 distributed models are relatively easy to write down, since you can just
 specify a marginal density for one variable, a common example being the
 normal density. Can you write down a mean zero, constant variance time
 series model (i.e., a collection of random variables) which is
 uncorrelated but not independent? If you can think of many choices, you
 can ask which may be most appropriate for these data.</p>
+<p><strong>Q3.3. Revisiting the 1/22 class feedback quiz
+problem.</strong> The <a href="https://ionides.github.io/531w25/03/q3-2.pdf">class question</a>
+was designed to have several plausible answers. I showed the question to
+one of my collaborators and was glad that he picked D, as I intended.
+However, I sympathize with some other answers. I’ve reworded D aiming to
+make it clearer. Since the data were generated from a stationary model,
+the time plot should not be strong evidence against stationarity, ruling
+out A. B and E acknowledge the variation in sample variance but do not
+provide useful ways to assess whtther this variable sample variance
+comes about via a stationary stochastic conditional variance model or
+via a non-stationary model.</p>
+<p>C and D contain a value judgement, “looks appropriate,” which is hard
+to quantify but is (in this case) correct! “Randomly changing variance”
+is an informal description of a model with stochastic conditional
+variance. The sample variance estimates the variance conditional on the
+realization of the conditional variance. The actual variance is an
+expectation over possible values of the conditional variance. So,
+between C and D, only D can be correct.</p>
+<p>If you want to continue discussing this question online, you are
+welcome.</p>
 <hr />
 
 
