--- a/03/index.html
+++ b/03/index.html
@@ -375,25 +375,29 @@ some basic time series models</h1>
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
+<td align="left">Annotated slides</td>
+<td align="center"><a href="slides-annotated.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Recording, Winter 2021: Chapter 3, Part 1</td>
 <td align="center"><a href="https://youtu.be/tLCAJ74cvnA">(27
 mins)</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">Recording, Winter 2021: Chapter 3, Part 2</td>
 <td align="center"><a href="https://youtu.be/HSWLJnLbCC0">(24
 mins)</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Recording, Winter 2021: Chapter 3, Part 3</td>
 <td align="center"><a href="https://youtu.be/rU8MnB6zAvM">(19
 mins)</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">Discussion question</td>
 <td align="center"><a href="discussion.html">html</a></td>
 </tr>
@@ -406,8 +410,7 @@ mins)</a></td>
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
 <a href="../acknowledge.html">Acknowledgements</a><br />
-<a href="http://github.com/ionides/531w24/tree/master/03/">Source code
-for these notes</a></p>
+<a href=".">Source code for these notes</a></p>
 <hr />
 
 
