--- a/index.html
+++ b/index.html
@@ -402,10 +402,10 @@ time series models</a></p></li>
 of ARMA models</a></p></li>
 <li><p><a href="05/index.html">Parameter estimation and model
 identification for ARMA models</a></p></li>
+<li><p><a href="06/index.html">Extending the ARMA model: Seasonality,
+integration and trend</a></p></li>
 </ol>
 <!--
-
-6. [Extending the ARMA model: Seasonality, integration and trend](06/index.html)
 
 7. [Introduction to time series analysis in the frequency domain](07/index.html)
 
