--- a/06/index.html
+++ b/06/index.html
@@ -375,20 +375,24 @@ and trend</h1>
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
+<td align="left">Annotated slides</td>
+<td align="center"><a href="slides-annotated.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Recording, Winter 2021: Chapter 6, Part 1</td>
 <td align="center"><a href="https://youtu.be/YSriL0C2D-A">(27
 mins)</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">Recording, Winter 2021: Chapter 6, Part 2</td>
 <td align="center"><a href="https://youtu.be/YtNGC60FJeU">(19
 mins)</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Discussion questions</td>
 <td align="center"><a href="discussion.html">html</a></td>
 </tr>
