--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ description</a></li>
 <li><a href="#class-notes" id="toc-class-notes">Class notes</a></li>
 <li><a href="#homework-and-participation-assignments" id="toc-homework-and-participation-assignments">Homework and
 participation assignments</a></li>
+<li><a href="#quizzes" id="toc-quizzes">Quizzes</a></li>
 <li><a href="#midterm-project" id="toc-midterm-project">Midterm
 project</a></li>
 <li><a href="#acknowledgements-and-license" id="toc-acknowledgements-and-license">Acknowledgements and
@@ -495,6 +496,13 @@ Nothing to submit.</p></li>
 -------------------
 
 -->
+</div>
+<div id="quizzes" class="section level2">
+<h2>Quizzes</h2>
+<ul>
+<li>Quiz 1. In class on Monday 2/17. <a href="quiz/quiz1.pdf">Sample
+questions with solutions</a>.</li>
+</ul>
 </div>
 <div id="midterm-project" class="section level2">
 <h2>Midterm project</h2>
