separate sample quiz questions and solutions

--- a/index.html
+++ b/index.html
@@ -500,8 +500,8 @@ Nothing to submit.</p></li>
 <div id="quizzes" class="section level2">
 <h2>Quizzes</h2>
 <ul>
-<li>Quiz 1. In class on Monday 2/17. <a href="quiz/quiz1.pdf">Sample
-questions with solutions</a>.</li>
+<li>Quiz 1. In class on Monday 2/17. <a href="quiz/quiz1-all.pdf">Sample
+questions</a>. <a href="quiz/quiz1-sol.pdf">With solutions</a>.</li>
 </ul>
 </div>
 <div id="midterm-project" class="section level2">
