--- a/index.html
+++ b/index.html
@@ -460,7 +460,9 @@ Nothing to submit.</p></li>
 -->
 <ul>
 <li><p><a href="hw04/hw04.html">Homework 4</a>, due Sun Feb 16, 11:59pm.
-<a href="hw04/sol04.html">Solution</a>.</p></li>
+<!--
+[Solution](hw04/sol04.html).
+--></p></li>
 <li><p><a href="participation/participation2.html">Piazza participation
 2</a>, due Sun Feb 16, 11:59pm.</p></li>
 </ul>
