--- a/index.html
+++ b/index.html
@@ -505,7 +505,8 @@ Nothing to submit.</p></li>
 <h2>Quizzes</h2>
 <ul>
 <li>Quiz 1. In class on Monday 2/17. <a href="quiz/quiz1-all.pdf">Sample
-questions</a>. <a href="quiz/quiz1-sol.pdf">With solutions</a>.</li>
+questions</a>. <a href="quiz/quiz1-sol.pdf">With solutions</a>. <a href="quiz/quiz1-sample.pdf">Sample quiz</a> randomly drawn from the
+quiz generator; the actual quiz will use a different seed.</li>
 </ul>
 </div>
 <div id="midterm-project" class="section level2">
