--- a/07/index.html
+++ b/07/index.html
@@ -375,20 +375,24 @@ analysis in the frequency domain</h1>
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
+<td align="left">Annotated slides</td>
+<td align="center"><a href="slides-annotated.pdf">pdf</a></td>
+</tr>
+<tr class="odd">
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Recording, Winter 2021: Chapter 7, Part 1</td>
 <td align="center"><a href="https://youtu.be/72aKoeHqhe8">(29
 mins)</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td align="left">Recording, Winter 2021: Chapter 7, Part 2</td>
 <td align="center"><a href="https://youtu.be/zpMS4jjYpcc">(29
 mins)</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td align="left">Discussion question</td>
 <td align="center"><a href="discussion.html">html</a></td>
 </tr>
