--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@ the frequency domain</a></p></li>
 domains</a></p></li>
 <li><p><a href="09/index.html">Case study: An association between
 unemployment and mortality?</a></p></li>
+<li><p><a href="10/index.html">Forecasting</a></p></li>
 </ol>
 <!--
 
