--- a/10/index.html
+++ b/10/index.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Edward L. Ionides" />
 
 
-<title>Analysis of Time Series DATASCI/STATS 531. Chapter 6: Extending the ARMA model: Seasonality, integration and trend</title>
+<title>Analysis of Time Series DATASCI/STATS 531. Chapter 10: Forecasting</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -350,8 +350,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">Analysis of Time Series<br>DATASCI/STATS
-531.<br>Chapter 6: Extending the ARMA model: Seasonality, integration
-and trend</h1>
+531.<br>Chapter 10: Forecasting</h1>
 <h4 class="author">Edward L. Ionides</h4>
 
 </div>
@@ -359,10 +358,6 @@ and trend</h1>
 
 <hr />
 <table>
-<colgroup>
-<col width="51%" />
-<col width="48%" />
-</colgroup>
 <thead>
 <tr class="header">
 <th align="left"> </th>
@@ -375,37 +370,20 @@ and trend</h1>
 <td align="center"><a href="slides.pdf">pdf</a></td>
 </tr>
 <tr class="even">
-<td align="left">Annotated slides</td>
-<td align="center"><a href="slides-annotated.pdf">pdf</a></td>
-</tr>
-<tr class="odd">
 <td align="left">Lecture notes</td>
 <td align="center"><a href="notes.pdf">pdf</a></td>
-</tr>
-<tr class="even">
-<td align="left">Recording, Winter 2021: Chapter 6, Part 1</td>
-<td align="center"><a href="https://youtu.be/YSriL0C2D-A">(27
-mins)</a></td>
-</tr>
-<tr class="odd">
-<td align="left">Recording, Winter 2021: Chapter 6, Part 2</td>
-<td align="center"><a href="https://youtu.be/YtNGC60FJeU">(19
-mins)</a></td>
-</tr>
-<tr class="even">
-<td align="left">Discussion questions</td>
-<td align="center"><a href="discussion.html">html</a></td>
 </tr>
 </tbody>
 </table>
 <hr />
 <!--
 | Annotated slides | [pdf](slides-annotated.pdf) |
+| Discussion questions | [html](discussion.html)
 -->
 <hr />
 <p><a href="../index.html">Back to course homepage</a><br />
 <a href="../acknowledge.html">Acknowledgements</a><br />
-<a href="http://github.com/ionides/531w25/tree/master/06/">Source code
+<a href="http://github.com/ionides/531w25/tree/master/10/">Source code
 for these notes</a></p>
 <hr />
 
