mt review instructions

--- a/index.html
+++ b/index.html
@@ -513,19 +513,22 @@ quiz generator; the actual quiz will use a different seed.</li>
 <div id="midterm-project" class="section level2">
 <h2>Midterm project</h2>
 <ul>
-<li><a href="midterm_project/midterm_project_info.html">Information</a>.</li>
+<li><p><a href="midterm_project/midterm_project_info.html">Information</a>.</p></li>
+<li><p><a href="midterm_project/midterm_review.html">Midterm peer review
+report instructions</a></p></li>
 </ul>
 <!--
-* [Midterm peer review report instructions](midterm_project/midterm_review.html)
 
-* [2024 midterm projects](midterm_project/index.html)
-
-* You are welcome to browse previous midterm projects. The [2022 midterm projects](http://ionides.github.io/531w22/midterm_project/) and  [2021 midterm projects](http://ionides.github.io/531w21/midterm_project/) have a posted summary of peer review comments. Earlier projects are also available, from [2016](http://ionides.github.io/531w16/midterm_project/), [2018](http://ionides.github.io/531w18/midterm_project/) and [2020](http://ionides.github.io/531w20/midterm_project/).
-
-
--------------
+* [2025 midterm projects](midterm_project/index.html)
 
 -->
+<ul>
+<li>You are welcome to browse previous midterm projects. The course
+websites from <a href="http://ionides.github.io/531w21/midterm_project/">2021</a>, <a href="http://ionides.github.io/531w22/midterm_project/">2022</a> and <a href="http://ionides.github.io/531w24/midterm_project/">2024</a> have a
+posted summary of peer review comments. Earlier projects are also
+available, from <a href="http://ionides.github.io/531w16/midterm_project/">2016</a>, <a href="http://ionides.github.io/531w18/midterm_project/">2018</a> and <a href="http://ionides.github.io/531w20/midterm_project/">2020</a>.</li>
+</ul>
+<hr />
 <!--
 
 ## Final project
