--- a/midterm_project/midterm_review.html
+++ b/midterm_project/midterm_review.html
@@ -9,10 +9,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="DATASCI/STATS 531, Winter 2024" />
+<meta name="author" content="DATASCI/STATS 531, Winter 2025" />
 
 
-<title>Midterm review report, due Sunday 3/10, 11:59pm</title>
+<title>Midterm review report, due Friday 2/28, 11:59pm</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,27 +349,28 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Midterm review report, due Sunday 3/10,
+<h1 class="title toc-ignore">Midterm review report, due Friday 2/28,
 11:59pm</h1>
-<h4 class="author">DATASCI/STATS 531, Winter 2024</h4>
+<h4 class="author">DATASCI/STATS 531, Winter 2025</h4>
 
 </div>
 
 
 <p>A few days after the midterm projects are submitted, you should
 expect to receive an email similar to the following. Summary points from
-past midterm review reports can be found at <a href="https://ionides.github.io/531w21/midterm_project/" class="uri">https://ionides.github.io/531w21/midterm_project/</a> and <a href="https://ionides.github.io/531w22/midterm_project/" class="uri">https://ionides.github.io/531w22/midterm_project/</a>. You
-are welcome to look at these for ideas when writing your reports.
-Reviews are graded according to a <a href="../rubric_midterm_review.html">posted rubric</a>.</p>
+past midterm review reports can be found from the <a href="https://ionides.github.io/531w21/midterm_project/">2021</a>, <a href="https://ionides.github.io/531w22/midterm_project/">2022</a>, and
+<a href="https://ionides.github.io/531w24/midterm_project/">2024</a>
+versions of 531. You are welcome to look at these for ideas when writing
+your reports. Reviews are graded according to a <a href="../rubric_midterm_review.html">posted rubric</a>.</p>
 <p><tt> Review assignments for foobar</p>
 <p>You have been assigned the following two projects to review.</p>
 <ul>
 <li>Review 1: Project number baz</li>
 <li>Review 2: Project number qux</li>
 </ul>
-<p>The projects are listed at <a href="https://ionides.github.io/531w24/midterm_project/index.html" class="uri">https://ionides.github.io/531w24/midterm_project/index.html</a>.
+<p>The projects are listed at <a href="https://ionides.github.io/531w25/midterm_project/index.html" class="uri">https://ionides.github.io/531w25/midterm_project/index.html</a>.
 Please submit your review reports in a single pdf file on Canvas, by
-Sunday 3/10. The reviews will not be posted publicly, and those who
+Friday 2/28. The reviews will not be posted publicly, and those who
 wrote the project should remain blind to your identity. Please do not
 unblind yourself, and do not question others on which reports they are
 reviewing. In other words, treat this process with the same respect
