Add midterm projects

--- a/index.html
+++ b/index.html
@@ -516,6 +516,8 @@ quiz generator; the actual quiz will use a different seed.</li>
 <li><p><a href="midterm_project/midterm_project_info.html">Information</a>.</p></li>
 <li><p><a href="midterm_project/midterm_review.html">Midterm peer review
 report instructions</a></p></li>
+<li><p><a href="midterm_project/index.html">2025 midterm
+projects</a></p></li>
 </ul>
 <!--
 
