Add remaining midterm projects

--- a/midterm_project/index.html
+++ b/midterm_project/index.html
@@ -385,7 +385,8 @@ Generation</a></td>
 <td></td>
 </tr>
 <tr class="even">
-<td align="left">4. TBA</td>
+<td align="left">4. <a href="project04/blinded.html">Ireland COVID-19
+Cases</a></td>
 <td align="left"></td>
 <td></td>
 </tr>
@@ -426,7 +427,8 @@ Index</a></td>
 <td></td>
 </tr>
 <tr class="odd">
-<td align="left">11. TBA</td>
+<td align="left">11. <a href="project11/blinded.pdf">Environmental Noise
+Polution</a></td>
 <td align="left"></td>
 <td></td>
 </tr>
@@ -455,7 +457,8 @@ Accidents</a></td>
 <td></td>
 </tr>
 <tr class="even">
-<td align="left">16. TBA</td>
+<td align="left">16. <a href="project16/blinded.html">Simulated Trade
+Activity</a></td>
 <td align="left"></td>
 <td></td>
 </tr>
