--- a/index.html
+++ b/index.html
@@ -453,13 +453,8 @@ Nothing to submit.</p></li>
 <a href="hw02/sol02.html">Solution</a>.</p></li>
 <li><p><a href="participation/participation1.html">Piazza participation
 1</a>, due Tue Jan 28, 11:59pm.</p></li>
-<li><p><a href="hw03/hw03.html">Homework 3</a>, due Sun Feb 9,
-11:59pm.</p></li>
-</ul>
-<!--
-[Solution](hw03/sol03.html).
--->
-<ul>
+<li><p><a href="hw03/hw03.html">Homework 3</a>, due Sun Feb 9, 11:59pm.
+<a href="hw03/sol03.html">Solution</a>.</p></li>
 <li><p><a href="hw04/hw04.html">Homework 4</a>, due Sun Feb 16, 11:59pm.
 <!--
 [Solution](hw04/sol04.html).
@@ -518,17 +513,10 @@ quiz generator; the actual quiz will use a different seed.</li>
 report instructions</a></p></li>
 <li><p><a href="midterm_project/index.html">2025 midterm
 projects</a></p></li>
-</ul>
-<!--
-
-* [2025 midterm projects](midterm_project/index.html)
-
--->
-<ul>
-<li>You are welcome to browse previous midterm projects. The course
+<li><p>You are welcome to browse previous midterm projects. The course
 websites from <a href="http://ionides.github.io/531w21/midterm_project/">2021</a>, <a href="http://ionides.github.io/531w22/midterm_project/">2022</a> and <a href="http://ionides.github.io/531w24/midterm_project/">2024</a> have a
 posted summary of peer review comments. Earlier projects are also
-available, from <a href="http://ionides.github.io/531w16/midterm_project/">2016</a>, <a href="http://ionides.github.io/531w18/midterm_project/">2018</a> and <a href="http://ionides.github.io/531w20/midterm_project/">2020</a>.</li>
+available, from <a href="http://ionides.github.io/531w16/midterm_project/">2016</a>, <a href="http://ionides.github.io/531w18/midterm_project/">2018</a> and <a href="http://ionides.github.io/531w20/midterm_project/">2020</a>.</p></li>
 </ul>
 <hr />
 <!--
