--- a/index.html
+++ b/index.html
@@ -412,11 +412,10 @@ domains</a></p></li>
 <li><p><a href="09/index.html">Case study: An association between
 unemployment and mortality?</a></p></li>
 <li><p><a href="10/index.html">Forecasting</a></p></li>
+<li><p><a href="11/index.html">Introduction to partially observed Markov
+process models</a></p></li>
 </ol>
 <!--
-
-10. [Introduction to partially observed Markov process models](10/index.html)
-
 11. [Introduction to simulation-based inference for epidemiological dynamics via the pomp R package](11/index.html)
 
 12. [Simulation of stochastic dynamic models](12/index.html)
@@ -456,9 +455,7 @@ Nothing to submit.</p></li>
 <li><p><a href="hw03/hw03.html">Homework 3</a>, due Sun Feb 9, 11:59pm.
 <a href="hw03/sol03.html">Solution</a>.</p></li>
 <li><p><a href="hw04/hw04.html">Homework 4</a>, due Sun Feb 16, 11:59pm.
-<!--
-[Solution](hw04/sol04.html).
---></p></li>
+<a href="hw04/sol04.html">Solution</a>.</p></li>
 <li><p><a href="participation/participation2.html">Piazza participation
 2</a>, due Sun Feb 16, 11:59pm.</p></li>
 </ul>
