midterm review samples

--- a/midterm_project/midterm_review.html
+++ b/midterm_project/midterm_review.html
@@ -361,7 +361,9 @@ expect to receive an email similar to the following. Summary points from
 past midterm review reports can be found from the <a href="https://ionides.github.io/531w21/midterm_project/">2021</a>, <a href="https://ionides.github.io/531w22/midterm_project/">2022</a>, and
 <a href="https://ionides.github.io/531w24/midterm_project/">2024</a>
 versions of 531. You are welcome to look at these for ideas when writing
-your reports. Reviews are graded according to a <a href="../rubric_midterm_review.html">posted rubric</a>.</p>
+your reports. Some sample reports from previous years are available: <a href="sample-mt-peer-review-w24-1.pdf">sample 1</a>, <a href="sample-mt-peer-review-w24-2.pdf">sample 2</a>, <a href="sample-mt-peer-review-w24-3.pdf">sample 3</a>. Reviews are graded
+according to a <a href="../rubric_midterm_review.html">posted
+rubric</a>.</p>
 <p><tt> Review assignments for foobar</p>
 <p>You have been assigned the following two projects to review.</p>
 <ul>
